<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:background="@drawable/border">
    <RelativeLayout
        android:id="@+id/rlLeftFriends"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/rlMiddleFriends"
        android:layout_alignBottom="@id/rlMiddleFriends"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="2dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgAvatarFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@id/imgConnectFriend"
            android:baselineAlignBottom="false"
            android:src="@drawable/photochaouche" />

        <TextView
            android:id="@+id/tvLetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/background_layout"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imgConnectFriend"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignBottom="@+id/imgAvatarFriends"
            android:layout_alignParentBottom="false"
            android:layout_marginRight="15dp"
            android:background="@drawable/border_true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMiddleFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="false"
        android:layout_marginBottom="2dp"
        android:layout_toRightOf="@id/rlLeftFriends">

        <RelativeLayout
            android:id="@+id/rlNomPrenomFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/txtPrenomFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/txtNomFriend"
                android:text="@string/pseudo1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNomFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/pseudo2"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtLastSoreFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlNomPrenomFriends"
            android:layout_centerHorizontal="false"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/score1"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlRightFriends"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/rlMiddleFriends">

        <tk.aimeschneider.classroomquizz.MyElements.ButtonFriend
            android:id="@+id/btnFriendSquare"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/border"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/challenge" />
    </RelativeLayout>

</RelativeLayout>
